syntax = "proto3";

package payment;

service PaymentService {
  rpc ProcessPayment (PaymentRequest) returns (PaymentResponse);
}

message PaymentRequest {
  string order_id = 1;
  string customer_id = 2;
  float amount = 3;
  string payment_method = 4;
}

message PaymentResponse {
  string transaction_id = 1;
  string status = 2; // "successful" or "failed"
  string message = 3;
}
